--- a/styles/style.css
+++ b/styles/style.css
@@ -135,12 +135,11 @@ nav {
 .my-recipes {
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
     flex: .5;
 }
 .blog {
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     flex: 1 ;
 }
@@ -176,8 +175,12 @@ nav {
 }
 .my-recipes .recipes-btn {
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-/* Style du select */
 .dropdownRecipe {
     background-color: white;
     color: #333;
@@ -189,27 +192,32 @@ nav {
     transition: all 0.3s ease;
     margin-left: 10px;
 }
-
-/* Effet hover sur le select */
 .dropdownRecipe:hover {
     border-color: #00AEEF;
     box-shadow: 0 0 5px rgba(0, 174, 239, 0.5);
 }
-
-/* Effet focus sur le select */
 .dropdownRecipe:focus {
     border-color: #007BB5;
     box-shadow: 0 0 8px rgba(0, 123, 181, 0.8);
 }
 
 .blog-post {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
     margin-bottom: 20px;
     text-align: center;
 }
 .blog-post img {
-    width: 500px;
+    width: 400px;
     height: auto;
     border: 1px solid #fff;
+}
+.blog-post span {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .blog-post h3 {
     margin: 10px 0;
@@ -467,6 +475,7 @@ button#add-row-button:hover, button#del-row-button:hover, button#save-button:hov
 }
 
 
+/* CONTACT FORM*/
 
 
 /* FOOTER */
