--- a/styles/style.css
+++ b/styles/style.css
@@ -309,6 +309,25 @@ button#add-row-button:hover, button#del-row-button:hover, button#save-button:hov
     transition-duration: .3s;
     background-color: var(--clr-accent-2);
 }
+.maxDistance {
+    color: var(--clr-text-dark);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.maxDistance input {
+    -webkit-appearance: none;
+    width: 35%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
 
 .results-table {
     width: 100%;
@@ -476,7 +495,36 @@ button#add-row-button:hover, button#del-row-button:hover, button#save-button:hov
 
 
 /* CONTACT FORM*/
-
+.contact-form {
+    background-color: var(--clr-header);
+}
+.contact-form h1 {
+    padding-top: 20px;
+}
+.contact-form form {
+    width: 100%;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+}
+.contact-form form label {
+    color: var(--clr-text-dark)
+}
+.contact-form form input {
+    font-size: 16px;
+    width: 300px;
+    height: 40px;
+    padding-left: 10px;
+}
+.contact-form form textarea {
+    font-size: 16px;
+    width: 500px;
+    height: 100px;
+    padding-left: 10px;
+}
 
 /* FOOTER */
 footer {
