Dangerous changes (DO NOT MERGE)
- FIxed redir of button
- started to add functionality for new dropdown style to list (scrollable)

--- a/styles/style.css
+++ b/styles/style.css
@@ -561,3 +561,11 @@ footer {
 .footer-links a:hover {
     color: var(--clr-accent-1);
 }
+
+/* Fix this part */
+.vertical-menu{
+    align-self: center;
+}
+.active{
+    color: blue;
+}
